@@ -1,24 +1,24 @@
 MEDIA_TYPE = netboot image
 
-TARGET = $(INITRD) $(KERNEL) $(DEST)/default.colo $(DEST)/vmlinux.gz $(DEST)/vmlinux_RAQ.gz $(DEST)/vmlinux_raq-2800.gz
+TARGET = $(INITRD) $(KERNEL) $(SOME_DEST)/$(EXTRANAME)default.colo $(SOME_DEST)/$(EXTRANAME)vmlinux.gz $(SOME_DEST)/$(EXTRANAME)vmlinux_RAQ.gz $(SOME_DEST)/$(EXTRANAME)vmlinux_raq-2800.gz
 EXTRANAME = $(MEDIUM)/
 
 MANIFEST-INITRD = "initrd for Cobalt machines"
 MANIFEST-KERNEL = "kernel image for Cobalt machines"
 
 # Add a colo binary plus symlinks
-$(DEST)/vmlinux.gz:
+$(SOME_DEST)/$(EXTRANAME)vmlinux.gz:
 	cp /boot/vmlinux.gz $@
 	./update-manifest $@ "Cobalt boot loader"
-	ln -s . $(DEST)/boot
+	ln -s . $(SOME_DEST)/$(EXTRANAME)boot
 
-$(DEST)/vmlinux_RAQ.gz:
+$(SOME_DEST)/$(EXTRANAME)vmlinux_RAQ.gz:
 	ln -s vmlinux.gz $@
 
-$(DEST)/vmlinux_raq-2800.gz:
+$(SOME_DEST)/$(EXTRANAME)vmlinux_raq-2800.gz:
 	ln -s vmlinux.gz $@
 
 # CoLo configuration file for TFTP
-$(DEST)/default.colo:
+$(SOME_DEST)/$(EXTRANAME)default.colo:
 	install -m 644 boot/mipsel/colo.tftp $@
 	./update-manifest $@ "Cobalt TFTP boot configuration script"
