@@ -1,14 +1,9 @@
 MEDIUM_SUPPORTED = generic tape
 
-KERNEL = $(DEST)/image.debian
-
 KERNELMAJOR = 2.4
-KERNELVERSION = 2.4.25-1-s390
+KERNELMINOR = 25
 KERNEL_FLAVOUR = di
-KERNELNAME = vmlinuz
 KERNELIMAGEVERSION = $(KERNELVERSION)
 
-$(DEST)/parmfile.debian:
-	install -m644 boot/s390/parmfile $@
-	./update-manifest $@ "parmfile"
-
+.PHONY: arch_boot_screens
+arch_boot_screens:
