@@ -1,16 +1,19 @@
 MEDIA_TYPE = generic
 
-KERNEL = $(DEST)/kernel.debian
-INITRD = $(DEST)/initrd.debian
-TARGET = $(INITRD) $(KERNEL) $(DEST)/debian.exec $(DEST)/parmfile.debian
+KERNELVERSION = $(KERNELMAJOR).$(KERNELMINOR)-1-s390
+KERNELNAME = vmlinuz
+
 EXTRANAME = $(MEDIUM)/
 
-MANIFEST-INITRD = "initrd"
-MANIFEST-KERNEL = "kernel for vmreader ipl"
+TARGET = $(TEMP_BOOT)
 
-$(DEST)/debian.exec: boot/s390/exec
-	install -m644 $^ $@
-	./update-manifest $@ "ipl script"
-
-$(TEMP)/kernel.debian: $(TEMP)/vmlinuz
-	ln $+ $@
+.PHONY: arch_boot
+arch_boot:
+	install -m 644 $(TEMP_INITRD) $(SOME_DEST)/$(EXTRANAME)initrd.debian
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)initrd.debian "initrd for vmreader ipl"
+	install -m 644 $(TEMP_KERNEL) $(SOME_DEST)/$(EXTRANAME)kernel.debian
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)kernel.debian "kernel for vmreader ipl"
+	install -m 644 boot/s390/parmfile $(SOME_DEST)/$(EXTRANAME)parmfile.debian
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)parmfile.debian "parmfile for vmreader ipl"
+	install -m 644 boot/s390/exec $(SOME_DEST)/$(EXTRANAME)debian.exec
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)debian.exec "vmreader ipl script"
