@@ -1,22 +1,21 @@
 MEDIA_TYPE = tape
+
 TYPE = s390-tape
 
-KERNEL = $(DEST)/kernel.debian
-TARGET = $(KERNEL) $(DEST)/initrd.debian $(DEST)/kernel.debian-nolabel $(DEST)/parmfile.debian
+KERNELVERSION = $(KERNELMAJOR).$(KERNELMINOR)-1-s390-tape
+KERNELNAME = vmlinuz-tape
+
 EXTRANAME = $(MEDIUM)/
 
-KERNELVERSION := $(KERNELVERSION)-tape
-KERNELNAME := $(KERNELNAME)-tape
+TARGET = $(TEMP_BOOT)
 
-MANIFEST-KERNEL = "kernel for tape ipl"
-
-$(DEST)/initrd.debian:
-	ln -fs ../generic/initrd.debian $@
-	./update-manifest $@ "initrd"
-
-$(DEST)/kernel.debian-nolabel: $(DEST)/kernel.debian
-	(dd bs=1 count=8 && dd bs=1 skip=1 count=0 && printf "\007" && dd) < $< > $@
-	./update-manifest $@ "kernel for tape ipl - nolabel"
-
-$(TEMP)/kernel.debian: $(TEMP)/vmlinuz-tape
-	ln $+ $@
+.PHONY: arch_boot
+arch_boot:
+	install -m 644 $(TEMP_INITRD) $(SOME_DEST)/$(EXTRANAME)initrd.debian
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)initrd.debian "initrd for tape ipl"
+	install -m 644 $(TEMP_KERNEL) $(SOME_DEST)/$(EXTRANAME)kernel.debian
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)kernel.debian "kernel for tape ipl"
+	(dd bs=1 count=8 && dd bs=1 skip=1 count=0 && printf "\007" && dd) < $(SOME_DEST)/$(EXTRANAME)kernel.debian > $(SOME_DEST)/$(EXTRANAME)kernel.debian-nolabel
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)kernel.debian-nolabel "kernel for tape ipl - nolabel"
+	install -m 644 boot/s390/parmfile $(SOME_DEST)/$(EXTRANAME)parmfile.debian
+	./update-manifest $(SOME_DEST)/$(EXTRANAME)parmfile.debian "parmfile for tape ipl"
